--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FlipGame</title>
+    <link rel="stylesheet" href="CSS/styling.css">
+    <script src="JS/script.js" type="module" defer></script>
+</head>
+<body>
+    <p class="gamename">FLIP Game PAU PAU ! ! !</p>
+    <section class="main">
+        <section id="gameboard"></section>
+    </section>
+</body>
+</html>
