--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="JS/script.js" type="module" defer></script>
 </head>
 <body>
-    <p class="gamename">FLIP Game PAU PAU ! ! !</p>
+    <p class="gamename">Halloween MEMORY GAME</p>
     <section class="main">
         <section id="gameboard"></section>
     </section>
