--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src="JS/script.js" type="module" defer></script>
 </head>
 <body>
-    <p class="gamename">Halloween MEMMORY GAME</p>
+    <p class="gamename">Halloween MEMORY GAME</p>
+    <p1 id="output"></p1>
     <section class="main">
         <section id="gameboard"></section>
     </section>
