--- a/index.html
+++ b/index.html
@@ -4,15 +4,149 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlipGame</title>
+    <title>Memory Game</title>
     <link rel="stylesheet" href="CSS/styling.css">
-    <script src="JS/script.js" type="module" defer></script>
+    <script src="JS/script.js" defer></script>
 </head>
 <body>
     <p class="gamename">Halloween MEMORY GAME</p>
-    <p1 id="output"></p1>
-    <section class="main">
-        <section id="gameboard"></section>
+    <div class="details">
+        <p class="time">Yhave: <span><b>20</b>s left</span></p>
+        <p class="flips">Flips: <span><b>0</b></span></p>
+        <button>Refresh cards</button>
+    </div>
+    <section class="gameboard">
+        <ul class="cards">
+            <li class="card">
+                <div class="face front-side">
+                    <img src="assets/images/halloween-pumpkin.png" class="imagecard"></img>
+                </div>
+                <div class="face back-side">
+                    <img src="assets/cards/halloween1.jpg" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="face front-side">
+                    <img src="assets/images/halloween-pumpkin.png" class="imagecard"></img>
+                </div>
+                <div class="face back-side">
+                    <img src="assets/cards/halloween2.jpg" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="face front-side">
+                    <img src="assets/images/halloween-pumpkin.png" class="imagecard"></img>
+                </div>
+                <div class="face back-side">
+                    <img src="assets/cards/halloween3.jpg" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="face front-side">
+                    <img src="assets/images/halloween-pumpkin.png" class="imagecard"></img>
+                </div>
+                <div class="face back-side">
+                    <img src="assets/cards/halloween4.jpg" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="face front-side">
+                    <img src="assets/images/halloween-pumpkin.png" class="imagecard"></img>
+                </div>
+                <div class="face back-side">
+                    <img src="assets/cards/halloween5.jpg" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="face front-side">
+                    <img src="assets/images/halloween-pumpkin.png" class="imagecard"></img>
+                </div>
+                <div class="face back-side">
+                    <img src="assets/cards/halloween6.jpg" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="face front-side">
+                    <img src="assets/images/halloween-pumpkin.png" class="imagecard"></img>
+                </div>
+                <div class="face back-side">
+                    <img src="assets/cards/halloween7.jpg" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="face front-side">
+                    <img src="assets/images/halloween-pumpkin.png" class="imagecard"></img>
+                </div>
+                <div class="face back-side">
+                    <img src="assets/cards/halloween8.jpg" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="face front-side">
+                    <img src="assets/images/halloween-pumpkin.png" class="imagecard"></img>
+                </div>
+                <div class="face back-side">
+                    <img src="assets/cards/halloween1.jpg" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="face front-side">
+                    <img src="assets/images/halloween-pumpkin.png" class="imagecard"></img>
+                </div>
+                <div class="face back-side">
+                    <img src="assets/cards/halloween2.jpg" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="face front-side">
+                    <img src="assets/images/halloween-pumpkin.png" class="imagecard"></img>
+                </div>
+                <div class="face back-side">
+                    <img src="assets/cards/halloween3.jpg" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="face front-side">
+                    <img src="assets/images/halloween-pumpkin.png" class="imagecard"></img>
+                </div>
+                <div class="face back-side">
+                    <img src="assets/cards/halloween4.jpg" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="face front-side">
+                    <img src="assets/images/halloween-pumpkin.png" class="imagecard"></img>
+                </div>
+                <div class="face back-side">
+                    <img src="assets/cards/halloween5.jpg" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="face front-side">
+                    <img src="assets/images/halloween-pumpkin.png" class="imagecard"></img>
+                </div>
+                <div class="face back-side">
+                    <img src="assets/cards/halloween6.jpg" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="face front-side">
+                    <img src="assets/images/halloween-pumpkin.png" class="imagecard"></img>
+                </div>
+                <div class="face back-side">
+                    <img src="assets/cards/halloween7.jpg" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="face front-side">
+                    <img src="assets/images/halloween-pumpkin.png" class="imagecard"></img>
+                </div>
+                <div class="face back-side">
+                    <img src="assets/cards/halloween8.jpg" alt="card-img">
+                </div>
+            </li>
+        </ul>
     </section>
+    
 </body>
 </html>
