--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Memory Game</title>
     <link rel="stylesheet" href="CSS/styling.css">
     <script src="JS/script.js" defer></script>
+    <!-- Connecting manifest -->
+    <link rel="manifest" href="./manifest.json">
+    <!-- Icon til app -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+    <!-- Icon til app -->
 </head>
 <body>
     <p class="gamename">Halloween MEMORY GAME</p>
